--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Levels/GameMap.GameMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/PrisonerDefense.PrisonerDefenseGameModeBase
+GlobalDefaultGameMode=/Game/Blueprints/BP_PDGameModeBase.BP_PDGameModeBase_C
 GlobalDefaultServerGameMode=None
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
