Fixed build bugs

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=B8EB5CBA4856ED329E62F592F5623084
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+IncludeDebugFiles=True
+
